client/styles/main.scss
$o-grid-is-silent: false;

@import 'n-normalize/main';
@import 'o-colors/main';
@import 'o-grid/main';

$font-sans: MetricWeb, sans-serif;
$font-serif: Georgia, serif;
$font-display: FinancierDisplayWeb, Georgia, serif;

body {
  @include oColorsFor(page, background);

  margin: 0;
  border: 0;
  font-family: $font-sans;
}


.site-header {
  padding: 18px 0 14px;
  text-align: center;
  border-bottom: 1px solid #e9decf;

  > a {
    opacity: 0.75;
    &:hover { opacity: 1; }
  }
}
    .masthead {
      height: 18px;
    }

.intro {
  font: 16px/1.20 FinancierText;
  width: 90%;
  margin: 0 auto;
  color: #333;
}

h1 {
    font: 400 28px/1.2 FinancierDisplay,serif;
    margin: .1em 0;
    text-align: center;
    font-size: 35px;
    margin-top: 10px;
}

.pressentation {
  display: block;
  margin: 0 auto;
  width: 75%;
  font-family: MetricWeb;
  font-size: 20px;
  color: #43423e;
}

.fanChart{
  margin-top: 30px;
  height:620;
  display: block;
  background-color: #ecafaf;
}

.inputs{
  margin-top: 30px;
  float: left;
  height: 620px;
  display: block;
}

.slideholder {
  width: 95%;
  font-family: MetricWeb;
  font-size: 22px;
  font-weight: 600;
  position: relative;
  margin: 20px 0 0 0;
  opacity: 1.0;
}

.dim {
  width: 95%;
  font-family: MetricWeb;
  font-size: 22px;
  font-weight: 600;
  position: relative;
  margin: 20px 0 0 0;
  opacity: 0.3;
}

.rangeleft {
  float: left;
  text-align: left;
  display: inline-block;
  width: 50%;
  font-family: MetricWeb;
  font-size: 20px;
  font-weight: 400;
}
.rangeright {
  float: right;
  text-align: right;
  display: inline-block;
  width: 50%;
  font-family: MetricWeb;
  font-size: 20px;
  font-weight: 400;
}

.slideLabel {
  color: #000000;
  width: 20px;
  position: absolute;
  text-align: center; 
  border-radius: 10px; 
  display: inline-block;
  font-family: MetricWeb;
  font-size: 20px;
  font-weight: 400;
}

@include oGridRespondTo(S) {
    h1 {
        font-size: 40px;
        margin-top: 10px;
    }

    .intro {
      font: 21px/1.3 FinancierText;
      width: 75%;
    }
    .pressentation {
      display: block;
      margin: 0 auto;
      width: 75%;
    }

}




///////sliders stytled through webkit 
input[type=range].slider {
  -webkit-appearance: none;
  width: 100%;
  margin: 14px auto 20px auto;
}
input[type=range].slider:focus {
  outline: none;
}
input[type=range].slider::-webkit-slider-runnable-track {
  width: 100%;
  height: 4px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #b8b1a9;
  border-radius: 7px;
  border: 0px solid #010101;
}
input[type=range].slider::-webkit-slider-thumb {
  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
  border: 4px solid #a9546e;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  background: #ffffff;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -13px;
}
input[type=range].slider:focus::-webkit-slider-runnable-track {
  background: #c4beb7;
}
input[type=range].slider::-moz-range-track {
  width: 100%;
  height: 4px;
  cursor: pointer;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
  background: #b8b1a9;
  border-radius: 7px;
  border: 0px solid #010101;
}
input[type=range].slider::-moz-range-thumb {
  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
  border: 3px solid #a9546e;
  height: 32px;
  width: 32px;
  border-radius: 18px;
  background: #ffffff;
  cursor: pointer;
}
input[type=range].slider::-ms-track {
  width: 100%;
  height: 4px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range].slider::-ms-fill-lower {
  background: #aca49b;
  border: 0px solid #010101;
  border-radius: 14px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type=range].slider::-ms-fill-upper {
  background: #b8b1a9;
  border: 0px solid #010101;
  border-radius: 14px;
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0px 0px 1px rgba(13, 13, 13, 0);
}
input[type=range].slider::-ms-thumb {
  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
  border: 4px solid #a9546e;
  height: 50px;
  width: 50px;
  border-radius: 30px;
  background: #ffffff;
  cursor: pointer;
  height: 8.4px;
}
input[type=range].slider:focus::-ms-fill-lower {
  background: #b8b1a9;
}
input[type=range].slider:focus::-ms-fill-upper {
  background: #c4beb7;
}

